# RemoveCoolBonus

./: Android.mk  CMakeLists.txt  README.md  RemoveCoolBonus.sln
RemoveCoolBonus/: RemoveCoolBonus.vcxproj  RemoveCoolBonus.vcxproj.filters  dllmain.c
RemoveCoolBonus/Objects/Global/: APICallback.h  ActClear.c  ActClear.h  Animals.h  Camera.h  HUD.h  Music.h  Player.h  Zone.h
RemoveCoolBonus/Objects/Helpers/: TimeAttackData.c
RemoveCoolBonus/Objects/Menu/: MenuParam.h
